--- a/LinesApp/Dockerfile
+++ b/LinesApp/Dockerfile
@@ -1,40 +1,38 @@
-# Stage 1: Build the Vue 3 application with Vite
+# Stage 1: Build Vue.js frontend
 FROM node:18-alpine AS build-stage
 
-# Define build arguments
-ARG GQL_SCHEMA_PATH
-ARG VITE_WS_API_URL
-ARG VITE_API_URL
-
-# Set environment variables
-ENV GQL_SCHEMA_PATH=$GQL_SCHEMA_PATH
-ENV VITE_WS_API_URL=$VITE_WS_API_URL
-ENV VITE_API_URL=$VITE_API_URL
-
+# Set working directory
 WORKDIR /app
 
-# Copy package files and install dependencies
+# Copy package.json and package-lock.json for caching
 COPY package*.json ./
-RUN npm install
 
-# Copy project files
+# Install dependencies
+RUN npm install --frozen-lockfile
+
+# Copy the entire application code
 COPY . .
 
-# Debug: Print environment variable before running codegen
-RUN echo "⚡ Using GraphQL Schema Path: $GQL_SCHEMA_PATH" && \
-    ls -la && \
-    cat codegen.ts || echo "❌ codegen.ts file missing!"
+# # Generate GraphQL types if required
+# RUN npm run codegen
 
-# Run GraphQL code generation
-RUN npm run codegen
-
-# Build the frontend
+# Build the Vue application
 RUN npm run build
 
+# Stage 2: Serve the app using a lightweight HTTP server
+FROM node:18-alpine AS serve-stage
 
-# Stage 2: Create the Nginx image and copy the build files
-# FROM nginx:1.27-alpine
-# COPY --from=build-stage /app/dist /usr/share/nginx/html
-# COPY --from=build-stage /app/nginx.conf /etc/nginx/conf.d/default.conf
-# EXPOSE 80
-# CMD ["nginx", "-g", "daemon off;"]
+# Install a simple HTTP server to serve static files
+RUN npm install -g http-server
+
+# Set working directory to the built app
+WORKDIR /app
+
+# Copy built files from the build stage
+COPY --from=build-stage /app/dist .
+
+# Expose port 8080
+EXPOSE 8080
+
+# Run the HTTP server on startup
+CMD ["http-server", "-p", "8080"]
