--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: LinesApp/package-lock.json 
 
       - name: Install Dependencies
         working-directory: LinesApp
