--- a/.github/workflows/reporting-cicd.yml
+++ b/.github/workflows/reporting-cicd.yml
@@ -62,3 +62,21 @@ jobs:
 
       - name: Push Docker image (latest tag)
         run: docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker-build-and-push
+
+    steps:
+    - name: Log in to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - name: Build and deploy Container App
+      uses: azure/container-apps-deploy-action@v1
+      with:
+        acrName: crsharedeastus2cpmprdtsol
+        containerAppName: ca-qa-eastus2-cpm-sol-app1
+        resourceGroup: rg-qa-eastus2-cpm-prdt-sol
+        imageToDeploy: crsharedeastus2cpmprdtsol.azurecr.io/job-python:1.0.7
