--- a/.github/workflows/reporting-cicd.yml
+++ b/.github/workflows/reporting-cicd.yml
@@ -65,7 +65,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: docker-build-and-push
+    needs: docker
 
     steps:
     - name: Log in to Azure
