--- a/.github/workflows/platform-cicd.yml
+++ b/.github/workflows/platform-cicd.yml
@@ -8,12 +8,12 @@ on:
 
 env:
   DOTNET_VERSION: '8.0.x'  
-  PROJECT_PATH: Platform/src/SOL.Gateway/SOL.Gateway.csproj
-  DOCKERFILE_PATH: Platform/src/Dockerfile
+  PROJECT_PATH: Platform/src/SOL.ServiceMesh/SOL.ServiceMesh.csproj
+  DOCKERFILE_PATH: Platform/src/SOL.ServiceMesh
   PROJECT_PATH_SOL: Platform/src
-  BUILD_OUTPUT_PATH: Platform/src/SOL.Gateway/publish
+  BUILD_OUTPUT_PATH: Platform/src/SOL.ServiceMesh/publish
   AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
-  IMAGE_NAME: platform-service
+  IMAGE_NAME: service-mesh
 
 jobs:
   build:
