--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -1,38 +1,37 @@
 name: Frontend CI/CD
 
 on:
-  # push:
-  #   branches:
-  #     - main
   pull_request:
     branches:
       - main
   workflow_dispatch:
 
 env:
-  FRONTEND_PATH: LinesApp
-  DOCKER_IMAGE_NAME: linesapp
   AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+  IMAGE_NAME: sol-gateway
+  DOCKERFILE_PATH: Platform/src/SOL.Gateway/Dockerfile
+  BUILD_CONTEXT: .
+  NODE_VERSION: 18 # Matches Node version in the Dockerfile
 
 jobs:
-  build-and-push-docker:
+  docker:
     runs-on: ubuntu-latest
-    # needs: build-frontend
+
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v4
-        
-      - name: 🔑 Log in to Azure Container Registry
-        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ env.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
-      - name: 🏗️ Build and Push Docker Image
-        working-directory: ${{ env.FRONTEND_PATH }}
+      - name: Log in to Azure Container Registry
         run: |
-          docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} .
-          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+          echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ env.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
-      - name: 🏷️ Tag and Push Latest Image
+      - name: Build Docker Image
         run: |
-          docker tag ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} \
-            ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+          docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+                       -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+                       -f ${{ env.DOCKERFILE_PATH }} ${{ env.BUILD_CONTEXT }}
+
+      - name: Push Docker Image to ACR
+        run: |
+          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
