--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -10,7 +10,7 @@ env:
   AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
   IMAGE_NAME: sol-gateway
   DOCKERFILE_PATH: Platform/src/SOL.Gateway/Dockerfile
-  BUILD_CONTEXT: .
+  BUILD_CONTEXT: Platform/src/
   NODE_VERSION: 18 # Matches Node version in the Dockerfile
 
 jobs:
