--- a/Keycloak/Docker/Dockerfile
+++ b/Keycloak/Docker/Dockerfile
@@ -16,8 +16,7 @@ ENV KC_HTTP_MANAGEMENT_ENABLED=true
 ENV KC_HTTP_MANAGEMENT_PORT=9000
 ENV KC_HOSTNAME=salubrity.app
 ENV KC_HOSTNAME_STRICT=true
-ENV KC_HTTPS_CERTIFICATE_FILE=
-ENV KC_HTTPS_CERTIFICATE_KEY_FILE=
+ENV KC_HTTP_ENABLED=true
 
 COPY --from=builder /opt/keycloak/ /opt/keycloak/
 
