--- a/Keycloak/Docker/Dockerfile
+++ b/Keycloak/Docker/Dockerfile
@@ -14,8 +14,7 @@ FROM quay.io/keycloak/keycloak:26.0
 
 ENV KC_HTTP_MANAGEMENT_ENABLED=true
 ENV KC_HTTP_MANAGEMENT_PORT=9000
-ENV KC_HOSTNAME=salubrity.app
-ENV KC_HOSTNAME_STRICT=true
+ENV KC_HOSTNAME_STRICT=false
 ENV KC_HTTP_ENABLED=true
 ENV KC_HOSTNAME_STRICT_HTTPS=false
 
