--- a/.github/workflows/keycloak-cicd.yml
+++ b/.github/workflows/keycloak-cicd.yml
@@ -30,3 +30,21 @@ jobs:
         run: |
           docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+
+    steps:
+    - name: Log in to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - name: Build and deploy Container App
+      uses: azure/container-apps-deploy-action@v1
+      with:
+        acrName: crsharedeastus2cpmprdtsol
+        containerAppName: ca-qa-eastus2-cpm-sol-keycloak
+        resourceGroup: rg-qa-eastus2-cpm-prdt-sol
+        imageToDeploy: crsharedeastus2cpmprdtsol.azurecr.io/keycloak:latest
