Re-enable realm import

--- a/Keycloak/Docker/Dockerfile
+++ b/Keycloak/Docker/Dockerfile
@@ -20,5 +20,5 @@ COPY ./providers/ /opt/keycloak/providers/
 COPY ./import/ /opt/keycloak/data/import/
 #COPY ./cert /cert
 
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized", "--import-realm"]
 #ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev", "--import-realm", "--db=mssql", "--spi-email-template-provider=freemarker-plus-mustache", "--spi-email-template-freemarker-plus-mustache-enabled=true", "--spi-theme-cache-themes=false", "--features=persistent-user-sessions,admin-fine-grained-authz,client-secret-rotation,dpop,passkeys,recovery-codes,scripts,token-exchange,update-email"]
