--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -1,9 +1,6 @@
-name: Frontend CI/CD
+name: LinesApp CI/CD
 
 on:
-  pull_request:
-    branches:
-      - main
   workflow_dispatch:
 
 env:
@@ -11,6 +8,11 @@ env:
   IMAGE_NAME: sol-gateway
   DOCKERFILE_PATH: Platform/src/SOL.Gateway/Dockerfile
 
+  # Define environment variables for build arguments
+  VITE_API_URL: "https://qa.salubrity.app/graphql/"
+  VITE_WS_API_URL: "wss://qa.salubrity.app/graphql/"
+  VITE_REPORT_SERVICE_URL: "https://qa.salubrity.app/reporting"
+  
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -25,7 +27,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+          docker build --build-arg VITE_API_URL=${{ env.VITE_API_URL }} \
+                       --build-arg VITE_WS_API_URL=${{ env.VITE_WS_API_URL }} \
+                       --build-arg VITE_REPORT_SERVICE_URL=${{ env.VITE_REPORT_SERVICE_URL }} \
+                       -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
                        -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
                        -f ${{ env.DOCKERFILE_PATH }} .
 
@@ -33,3 +38,4 @@ jobs:
         run: |
           docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
